k8s/deployment.yaml
# k8s-whodis/k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-whodis
  namespace: k8s-whodis
  labels:
    app: k8s-whodis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-whodis
  template:
    metadata:
      labels:
        app: k8s-whodis
    spec:
      nodeSelector:    # Remember to "kubectl label nodes laptop-worker-1 role=worker"
        role: worker
      containers:
        - name: web-server
          image: docker.io/ken0k/k8s-whodis:python-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
